devscripts (2.10.52) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Mon, 15 Jun 2009 19:41:02 +0100

devscripts (2.10.51) unstable; urgency=low

  [ Adam D. Barratt ]
  * bts:
    + Add a note to the description of --smtp-server explaining that
      reportbug.debian.org does not support relaying and is therefore not a
      suitable server to use in circumstances where $package@packages.d.o
      may be automatically Cced.
    + Ignore the --{force-,}interactive options when combined with -n.
      (Closes: #531422)
  * checkbashisms:
    + Detect shellscript wrappers that use "then" or "else" before calling
      exec.  Thanks, Raphael Geissert.  (Closes: #530815)
    + Fix a false positive detection of ". $(foo bar)" as attempting to pass
      arguments to a sourced script.  Thanks, Raphael Geissert.
    + Detect use of passing arguments to a sourced script as part of a
      conditional statement.  Thanks, Raphael Geissert.
    + Correctly count the number of quotes in a line when detecting whether
      we are currently inside a "quoted block".  Thanks, Raphael Geissert.
      (Closes: #531247)
    + Do not check the contents of a dpatch.  The wrapper script always uses
      /bin/sh and we can't detect the interpreter of a patch.
    + Improve the check for the use of $[] inside quoted text.  Thanks,
      Raphael Geissert.
    + Apply the "common lead-in text" to the "readonly" check.
    + Remove "\\" from the list of unsafe backslash escapes, as it appears to
      work in all shells.
  * dcmd: Parse changes / dsc files containing section or priority entries of
    "-".  (Closes: #531593)
  * licensecheck: Fix an error in a regular expression which led to an
    uninitialized value warning and missing version for some GPL headers.
    Thanks, Jakub Wilk.  (Closes: #531059)
  * uscan: Make a regular expression example in the manpage clearer.  Thanks,
    Jason Heeris.  (Closes: #530362)